objects/GL_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Definition__c</fullName>
        <description>GL account definitions</description>
        <inlineHelpText>Maximum Character Size is 255 characters</inlineHelpText>
        <label>Account Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Defines the account type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Saved Assumptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Proposed Account ID</description>
        <label>Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregation_CONSOL__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_FS__c</fullName>
        <label>Aggregation (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFP__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFSC__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_WF_REP__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alias_Default__c</fullName>
        <label>Alias: Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_GL_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter 10 and click on search</inlineHelpText>
        <label>Alternate GL Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference_Data__c.Data_Element__c</field>
                <operation>equals</operation>
                <value>Alternate GL Category</value>
            </filterItems>
            <filterItems>
                <field>Reference_Data__c.Data_Element_ID_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Reference_Data__c.GL_Account_Type__c</field>
                <operation>contains</operation>
                <valueField>$Source.GL_Account_Type__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Reference_Data__c</referenceTo>
        <relationshipLabel>GL Accounts (Alternate GL Category)</relationshipLabel>
        <relationshipName>GL_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <description>value is used by and set in approval process</description>
        <label>Approval Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Asset_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blackout_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blackout Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Segment</label>
        <referenceTo>Business_Segment__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chart_of_Account__c</fullName>
        <defaultValue>&apos;8100&apos;</defaultValue>
        <label>Chart of Accounts Main</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use ISO Code to search</inlineHelpText>
        <label>Currency</label>
        <referenceTo>Currencies__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Storage_CONSOL__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_FS__c</fullName>
        <label>Data Storage (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFP__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFSC__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_WF_REP__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unspecified</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Non Currency</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>SmartList</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Netsuite_Type__c</field>
                <operation>equals</operation>
                <value>Deferred Revenue</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>GL Accounts (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>GL_Account1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eliminate_intercompany_transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine (1) if the account has to be eliminated AND (2) if it will be eliminated by using &quot;make intercompany journal entry&quot;</description>
        <label>Eliminate intercompany transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Type__c</fullName>
        <description>Exchange Rate Type depends on the value specified for Data Type. Valid values: Average, Ending, and Historical when Data Type is Currency, or None when Data Type is anything other than Currency.</description>
        <label>Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Ending</fullName>
                </value>
                <value>
                    <fullName>No Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FX_Clearing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to allow postings to populate in FX Clearing table</description>
        <label>FX Clearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Rollup_Node_ID__c</fullName>
        <formula>Financial_Statement_Rollup__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Statement Rollup Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Rollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Financial Statement Rollup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>GL Account Financial Statement Rollup Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts (Financial Statement Rollup)</relationshipLabel>
        <relationshipName>GL_Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Updated_in_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to check once manual NetSuite updates have been made</description>
        <label>Financial Statement Updated in NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freez_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freez Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function_Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Function (Cost Center)</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Lender_Hierarchy_Node_ID__c</fullName>
        <formula>GL_Account_Lender_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Lender Hierarchy Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Lender_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>GL Account Lender Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>GL Account Lender Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts (GL Account Lender Hierarchy)</relationshipLabel>
        <relationshipName>GL_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Management_Hierarchy_Node_ID__c</fullName>
        <formula>GL_Account_Management_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Management Hierarchy Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Management_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>GL Account Management Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>GL Account Management Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts (GL Account Management Hierarchy)</relationshipLabel>
        <relationshipName>GL_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Management_Proform_Node_ID__c</fullName>
        <formula>GL_Account_Management_w_Proforma__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Management Proform Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Management_w_Proforma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>GL Account Management w/ Proforma</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>GL Account Management w Proforma Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts (GL Account Management w/ Proforma)</relationshipLabel>
        <relationshipName>GL_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Status__c</fullName>
        <description>Posting status for actual accounts</description>
        <label>GL Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Account_Type__c</fullName>
        <label>GL Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NonOp</fullName>
                </value>
                <value>
                    <fullName>Interco Revenue</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Interco Expense</fullName>
                </value>
                <value>
                    <fullName>Restructuring</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                </value>
                <value>
                    <fullName>Stored</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <description>Last time approval status was changed to Approved; set in WF</description>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>